test/tests/stages/5_local_variables/valid/use_val_in_own_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  &&
  identifier(a)
  ;
  return
  identifier(a)
  ;
  }
