test/tests/stages/5_local_variables/invalid_parse/extra_credit/binary_increment.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  return
  identifier(a)
  ++
  const int(1)
  ;
  }
